# edge_matching_puzzle

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  README  README.md  infra_infos.txt
doc/example/: 3_3.txt  4_4.txt  5_5.txt  5_5_bis.txt
doc/example/ressources/: ressources
include/: CUDA_backtracker_stack.h  CUDA_color_constraints.h  CUDA_common.h  CUDA_common_glutton.h  CUDA_common_struct_glutton.h  CUDA_glutton_max.h  CUDA_glutton_max_stack.h  CUDA_glutton_situation.h  CUDA_glutton_situations.h  CUDA_glutton_stack_XML_converter.h  CUDA_glutton_stack_dumper.h  CUDA_glutton_wide.h  CUDA_memory_managed_array.h  CUDA_memory_managed_item.h  CUDA_memory_managed_pointer.h  CUDA_piece_position_info.h  CUDA_piece_position_info2.h  CUDA_piece_position_info_base.h  CUDA_print.h  CUDA_situation_capability.h  CUDA_strong_primitive.h  CUDA_transition_manager.h  CUDA_types.h  VTK_histogram_dumper.h  VTK_line_plot_dumper.h  VTK_table_based_dumper.h  algo_based_feature.h  border_backtracker.h  border_color_constraint.h  border_constraint_generator.h  border_exploration.h  common.h  emp_FSM.h  emp_FSM_UI.h  emp_FSM_context.h  emp_FSM_info.h  emp_FSM_motor.h  emp_FSM_situation.h  emp_FSM_situation_analyzer.h  emp_FSM_transition.h  (+61 more)
src/: CUDA_backtracker.cu  CUDA_common_glutton.cu  CUDA_glutton_max.cpp  CUDA_glutton_max.cu  CUDA_glutton_wide.cpp  CUDA_glutton_wide.cu  CUDA_piece_position_info.cu  CUDA_piece_position_info_base.cu  border_backtracker.cpp  emp_FSM.cpp  emp_FSM_UI.cpp  emp_FSM_motor.cpp  emp_FSM_situation.cpp  emp_FSM_situation_analyzer.cpp  emp_piece.cpp  emp_se_step_info.cpp  emp_situation_base.cpp  emp_strategy_generator_factory.cpp  emp_types.cpp  emp_web_server.cpp  feature_CUDA_backtracker.cpp  feature_compute_stats.cpp  feature_display_all.cpp  feature_display_max.cpp  feature_display_solutions.cpp  feature_dump_solutions.cpp  feature_situation_profile.cpp  feature_system_equation.cpp  main.cpp  piece_position_info.cpp  signal_handler.cpp
tests/CUDA_glutton_max_3_3/: test.info
tests/CUDA_glutton_max_4_4/: test.info
tests/CUDA_glutton_max_5_5/: test.info
tests/CUDA_glutton_max_cpu_3_3/: test.info
tests/CUDA_glutton_max_cpu_4_4/: test.info
tests/CUDA_glutton_max_cpu_5_5/: test.info
tests/compute_stats_3_3/: test.info
tests/compute_stats_3_3/references/: stats_3_3.txt  stats_3_3_vtk.txt
tests/compute_stats_4_4/: test.info
tests/compute_stats_4_4/references/: stats_4_4.txt  stats_4_4_vtk.txt
tests/compute_stats_5_5/: test.info
tests/compute_stats_5_5/references/: stats_5_5.txt  stats_5_5_vtk.txt
tests/display_all_3_3/: test.info
tests/display_solutions_3_3/: test.info
tests/display_solutions_4_4/: test.info
tests/display_solutions_5_5/: test.info
tests/dump_solutions_3_3/: test.info
tests/dump_solutions_4_4/: test.info
tests/dump_solutions_5_5/: test.info
tests/dump_summary_3_3/: test.info
tests/dump_summary_4_4/: test.info
tests/dump_summary_5_5/: test.info
tests/new_strategy_3_3/: test.info
tests/new_strategy_4_4/: test.info
tests/new_strategy_5_5/: test.info
tests/profile_3_3/: test.info
tests/profile_3_3/references/: profile_high_max_vtk.txt  profile_high_min_vtk.txt  profile_low_max_vtk.txt  profile_low_min_vtk.txt  profile_total_max_vtk.txt  profile_total_min_vtk.txt  solutions.txt
tests/situation_profile_3_3/: test.info
tests/situation_profile_3_3/references/: 3_3_level_glutton.txt  3_3_level_max_glutton.txt  3_3_level_max_max_glutton.txt  3_3_level_max_min_glutton.txt  3_3_level_min_glutton.txt  3_3_level_min_max_glutton.txt  3_3_level_min_min_glutton.txt  3_3_level_rvector_op_max_glutton.txt  3_3_level_rvector_op_min_glutton.txt  3_3_level_total_max_glutton.txt  3_3_level_total_min_glutton.txt  3_3_level_vector_op_max_glutton.txt  3_3_level_vector_op_min_glutton.txt  3_3_line_plot_vtk.txt  3_3_surface_vtk.txt
tests/situation_profile_4_4/: test.info
tests/situation_profile_4_4/references/: 4_4_level_glutton.txt  4_4_level_max_glutton.txt  4_4_level_max_max_glutton.txt  4_4_level_max_min_glutton.txt  4_4_level_min_glutton.txt  4_4_level_min_max_glutton.txt  4_4_level_min_min_glutton.txt  4_4_level_rvector_op_max_glutton.txt  4_4_level_rvector_op_min_glutton.txt  4_4_level_total_max_glutton.txt  4_4_level_total_min_glutton.txt  4_4_level_vector_op_max_glutton.txt  4_4_level_vector_op_min_glutton.txt  4_4_line_plot_vtk.txt  4_4_surface_vtk.txt
tests/situation_profile_5_5/: test.info
tests/situation_profile_5_5/references/: 5_5_level_glutton.txt  5_5_level_max_glutton.txt  5_5_level_max_max_glutton.txt  5_5_level_max_min_glutton.txt  5_5_level_min_glutton.txt  5_5_level_min_max_glutton.txt  5_5_level_min_min_glutton.txt  5_5_level_rvector_op_max_glutton.txt  5_5_level_rvector_op_min_glutton.txt  5_5_level_total_max_glutton.txt  5_5_level_total_min_glutton.txt  5_5_level_vector_op_max_glutton.txt  5_5_level_vector_op_min_glutton.txt  5_5_line_plot_vtk.txt  5_5_surface_vtk.txt
tests/system_equation_3_3/: test.info
tests/system_equation_4_4/: test.info
tests/system_equation_5_5/: test.info
tests_CUDA/backtracker_3_3/: test.info
tests_CUDA/backtracker_4_4/: test.info
tests_CUDA/backtracker_5_5/: test.info
tests_CUDA/glutton_max_3_3/: test.info
